[package]
name = "fast-glob"
version = "0.2.0"
edition = "2021"
license = "MIT"

authors = [
    "Devon Govett <devongovett@gmail.com>",
    "shulaoda <laipichan@qq.com>",
]
categories = ["filesystem"]
keywords = ["glob", "pattern", "walkdir"]
documentation = "https://docs.rs/fast-glob"
description = "An extremely fast glob matcher"
repository = "https://github.com/shulaoda/fast-glob.git"

[dev-dependencies]
criterion = "0.5.1"
glob = "0.3.1"
globset = "0.4.14"

[[test]]
name = "test"
path = "tests/test.rs"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
