[package]
name = "fast-glob"
version = "0.4.4"
edition = "2021"
license = "MIT"

authors = ["shulaoda <laipichan@qq.com>"]
keywords = ["glob", "pattern", "walkdir"]
categories = ["filesystem"]
documentation = "https://docs.rs/fast-glob"
description = "A high-performance glob matching crate for Rust"
repository = "https://github.com/shulaoda/fast-glob.git"

[dev-dependencies]
criterion = "0.5.1"
glob = "0.3.2"
globset = "0.4.15"
glob-match = "0.2.1"
codspeed-criterion-compat = "2.7.2"

[[test]]
name = "test"
path = "tests/test.rs"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[dependencies]
arrayvec = "0.7.6"
